Update NZBHydra to v2 beta